screen height shifting layout  bug fixed

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -31,6 +31,7 @@
       }
       .all-main {
         grid-area: main;
+        @apply min-h-screen ;
       }
       .all-footer {
         grid-area: footer;
